parser.output
Nonterminals useless in grammar

    FuncDef
    FuncType


Rules useless in grammar

   93 FuncType: VOIDTK
   94         | INTTK
   95         | FLOATTK


State 1 conflicts: 1 shift/reduce
State 2 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompUnit $end

    1 CompUnit: DeclOrFuncDefList

    2 DeclOrFuncDefList: DeclOrFuncDef
    3                  | DeclOrFuncDefList DeclOrFuncDef

    4 DeclOrFuncDef: VOIDTK ID LPARENT FuncFParamsOpt RPARENT Block
    5              | INTTK ID LPARENT FuncFParamsOpt RPARENT Block
    6              | FLOATTK ID LPARENT FuncFParamsOpt RPARENT Block
    7              | Decl

    8 Decl: ConstDecl
    9     | VarDecl

   10 ConstDecl: CONSTTK BType ConstDef SEMICN

   11 BType: INTTK
   12      | FLOATTK

   13 ConstDef: ID ASSIGN ConstInitVal

   14 ConstInitVal: ConstExp

   15 VarDecl: BType VarDef VarDefListOpt SEMICN

   16 VarDefListOpt: ε
   17              | VarDefList

   18 VarDefList: COMMA VarDef
   19           | VarDefList COMMA VarDef

   20 VarDef: ID
   21       | ID LBRACKET ConstExp RBRACKET
   22       | ID LBRACKET ConstExp RBRACKET LBRACKET ConstExp RBRACKET
   23       | ID ASSIGN InitVal

   24 InitVal: Exp

   25 FuncFParamsOpt: ε
   26               | FuncFParams

   27 FuncFParams: FuncFParam
   28            | FuncFParams COMMA FuncFParam

   29 FuncRParamsOpt: ε
   30               | FuncRParams

   31 FuncRParams: Exp
   32            | FuncRParams COMMA Exp

   33 FuncFParam: BType ID
   34           | BType ID LBRACKET RBRACKET FuncFParamDims

   35 FuncFParamDims: LBRACKET RBRACKET
   36               | FuncFParamDims LBRACKET RBRACKET

   37 Block: LBRACE BlockItem_list RBRACE

   38 BlockItem_list: ε
   39               | BlockItem_list BlockItem

   40 BlockItem: Decl
   41          | Stmt
   42          | error SEMICN

   43 Stmt: LVal ASSIGN Exp SEMICN
   44     | LVal ASSIGN Exp ELSETK
   45     | Exp SEMICN
   46     | Exp error
   47     | LVal ASSIGN Exp error
   48     | SEMICN
   49     | Block
   50     | IFTK LPARENT Cond RPARENT Stmt
   51     | IFTK LPARENT Cond RPARENT Stmt ELSETK Stmt
   52     | WHILETK LPARENT Cond RPARENT Stmt
   53     | BREAKTK SEMICN
   54     | CONTINUETK SEMICN
   55     | RETURNTK SEMICN
   56     | RETURNTK Exp SEMICN

   57 Exp: AddExp

   58 Cond: LOrExp

   59 LVal: ID
   60     | ID LBRACKET Exp RBRACKET
   61     | ID LBRACKET Exp COMMA Exp RBRACKET error

   62 PrimaryExp: LPARENT Exp RPARENT
   63           | LVal
   64           | Number

   65 Number: INTCON
   66       | FLOATCON

   67 UnaryExp: PrimaryExp
   68         | ID LPARENT FuncRParamsOpt RPARENT
   69         | UnaryOp UnaryExp

   70 UnaryOp: PLUS
   71        | MINUS
   72        | NOT

   73 MulExp: UnaryExp
   74       | MulExp MUL UnaryExp
   75       | MulExp DIV UnaryExp
   76       | MulExp MOD UnaryExp

   77 AddExp: MulExp
   78       | AddExp PLUS MulExp
   79       | AddExp MINUS MulExp

   80 RelExp: AddExp
   81       | RelExp LT AddExp
   82       | RelExp GT AddExp
   83       | RelExp LEQ AddExp
   84       | RelExp GEQ AddExp

   85 EqExp: RelExp
   86      | EqExp EQ RelExp
   87      | EqExp NEQ RelExp

   88 LAndExp: EqExp
   89        | LAndExp AND EqExp

   90 LOrExp: LAndExp
   91       | LOrExp OR LAndExp

   92 ConstExp: AddExp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 42 46 47 61
    INTTK <str> (258) 5 11
    FLOATTK <str> (259) 6 12
    VOIDTK <str> (260) 4
    CONSTTK <str> (261) 10
    IFTK <str> (262) 50 51
    ELSETK <str> (263) 44 51
    WHILETK <str> (264) 52
    BREAKTK <str> (265) 53
    CONTINUETK <str> (266) 54
    RETURNTK <str> (267) 55 56
    ID <str> (268) 4 5 6 13 20 21 22 23 33 34 59 60 61 68
    INTCON <intval> (269) 65
    FLOATCON <str> (270) 66
    PLUS <str> (271) 70 78
    MINUS <str> (272) 71 79
    MUL <str> (273) 74
    DIV <str> (274) 75
    MOD <str> (275) 76
    ASSIGN <str> (276) 13 23 43 44 47
    EQ <str> (277) 86
    NEQ <str> (278) 87
    LT <str> (279) 81
    GT <str> (280) 82
    LEQ <str> (281) 83
    GEQ <str> (282) 84
    AND <str> (283) 89
    OR <str> (284) 91
    NOT <str> (285) 72
    LPARENT <str> (286) 4 5 6 50 51 52 62 68
    RPARENT <str> (287) 4 5 6 50 51 52 62 68
    LBRACKET <str> (288) 21 22 34 35 36 60 61
    RBRACKET <str> (289) 21 22 34 35 36 60 61
    LBRACE <str> (290) 37
    RBRACE <str> (291) 37
    SEMICN <str> (292) 10 15 42 43 45 48 53 54 55 56
    COMMA <str> (293) 18 19 28 32 61


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    CompUnit <node> (40)
        on left: 1
        on right: 0
    DeclOrFuncDefList <node> (41)
        on left: 2 3
        on right: 1 3
    DeclOrFuncDef <node> (42)
        on left: 4 5 6 7
        on right: 2 3
    Decl <node> (43)
        on left: 8 9
        on right: 7 40
    ConstDecl <node> (44)
        on left: 10
        on right: 8
    BType <node> (45)
        on left: 11 12
        on right: 10 15 33 34
    ConstDef <node> (46)
        on left: 13
        on right: 10
    ConstInitVal <node> (47)
        on left: 14
        on right: 13
    VarDecl <node> (48)
        on left: 15
        on right: 9
    VarDefListOpt <node> (49)
        on left: 16 17
        on right: 15
    VarDefList <node> (50)
        on left: 18 19
        on right: 17 19
    VarDef <node> (51)
        on left: 20 21 22 23
        on right: 15 18 19
    InitVal <node> (52)
        on left: 24
        on right: 23
    FuncFParamsOpt <node> (53)
        on left: 25 26
        on right: 4 5 6
    FuncFParams <node> (54)
        on left: 27 28
        on right: 26 28
    FuncRParamsOpt <node> (55)
        on left: 29 30
        on right: 68
    FuncRParams <node> (56)
        on left: 31 32
        on right: 30 32
    FuncFParam <node> (57)
        on left: 33 34
        on right: 27 28
    FuncFParamDims <node> (58)
        on left: 35 36
        on right: 34 36
    Block <node> (59)
        on left: 37
        on right: 4 5 6 49
    BlockItem_list <node> (60)
        on left: 38 39
        on right: 37 39
    BlockItem <node> (61)
        on left: 40 41 42
        on right: 39
    Stmt <node> (62)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 41 50 51 52
    Exp <node> (63)
        on left: 57
        on right: 24 31 32 43 44 45 46 47 56 60 61 62
    Cond <node> (64)
        on left: 58
        on right: 50 51 52
    LVal <node> (65)
        on left: 59 60 61
        on right: 43 44 47 63
    PrimaryExp <node> (66)
        on left: 62 63 64
        on right: 67
    Number <node> (67)
        on left: 65 66
        on right: 64
    UnaryExp <node> (68)
        on left: 67 68 69
        on right: 69 73 74 75 76
    UnaryOp <node> (69)
        on left: 70 71 72
        on right: 69
    MulExp <node> (70)
        on left: 73 74 75 76
        on right: 74 75 76 77 78 79
    AddExp <node> (71)
        on left: 77 78 79
        on right: 57 78 79 80 81 82 83 84 92
    RelExp <node> (72)
        on left: 80 81 82 83 84
        on right: 81 82 83 84 85 86 87
    EqExp <node> (73)
        on left: 85 86 87
        on right: 86 87 88 89
    LAndExp <node> (74)
        on left: 88 89
        on right: 89 90 91
    LOrExp <node> (75)
        on left: 90 91
        on right: 58 91
    ConstExp <node> (76)
        on left: 92
        on right: 14 21 22


State 0

    0 $accept: • CompUnit $end

    INTTK    shift, and go to state 1
    FLOATTK  shift, and go to state 2
    VOIDTK   shift, and go to state 3
    CONSTTK  shift, and go to state 4

    CompUnit           go to state 5
    DeclOrFuncDefList  go to state 6
    DeclOrFuncDef      go to state 7
    Decl               go to state 8
    ConstDecl          go to state 9
    BType              go to state 10
    VarDecl            go to state 11


State 1

    5 DeclOrFuncDef: INTTK • ID LPARENT FuncFParamsOpt RPARENT Block
   11 BType: INTTK •

    ID  shift, and go to state 12

    ID  [reduce using rule 11 (BType)]


State 2

    6 DeclOrFuncDef: FLOATTK • ID LPARENT FuncFParamsOpt RPARENT Block
   12 BType: FLOATTK •

    ID  shift, and go to state 13

    ID  [reduce using rule 12 (BType)]


State 3

    4 DeclOrFuncDef: VOIDTK • ID LPARENT FuncFParamsOpt RPARENT Block

    ID  shift, and go to state 14


State 4

   10 ConstDecl: CONSTTK • BType ConstDef SEMICN

    INTTK    shift, and go to state 15
    FLOATTK  shift, and go to state 16

    BType  go to state 17


State 5

    0 $accept: CompUnit • $end

    $end  shift, and go to state 18


State 6

    1 CompUnit: DeclOrFuncDefList •
    3 DeclOrFuncDefList: DeclOrFuncDefList • DeclOrFuncDef

    INTTK    shift, and go to state 1
    FLOATTK  shift, and go to state 2
    VOIDTK   shift, and go to state 3
    CONSTTK  shift, and go to state 4

    $default  reduce using rule 1 (CompUnit)

    DeclOrFuncDef  go to state 19
    Decl           go to state 8
    ConstDecl      go to state 9
    BType          go to state 10
    VarDecl        go to state 11


State 7

    2 DeclOrFuncDefList: DeclOrFuncDef •

    $default  reduce using rule 2 (DeclOrFuncDefList)


State 8

    7 DeclOrFuncDef: Decl •

    $default  reduce using rule 7 (DeclOrFuncDef)


State 9

    8 Decl: ConstDecl •

    $default  reduce using rule 8 (Decl)


State 10

   15 VarDecl: BType • VarDef VarDefListOpt SEMICN

    ID  shift, and go to state 20

    VarDef  go to state 21


State 11

    9 Decl: VarDecl •

    $default  reduce using rule 9 (Decl)


State 12

    5 DeclOrFuncDef: INTTK ID • LPARENT FuncFParamsOpt RPARENT Block

    LPARENT  shift, and go to state 22


State 13

    6 DeclOrFuncDef: FLOATTK ID • LPARENT FuncFParamsOpt RPARENT Block

    LPARENT  shift, and go to state 23


State 14

    4 DeclOrFuncDef: VOIDTK ID • LPARENT FuncFParamsOpt RPARENT Block

    LPARENT  shift, and go to state 24


State 15

   11 BType: INTTK •

    $default  reduce using rule 11 (BType)


State 16

   12 BType: FLOATTK •

    $default  reduce using rule 12 (BType)


State 17

   10 ConstDecl: CONSTTK BType • ConstDef SEMICN

    ID  shift, and go to state 25

    ConstDef  go to state 26


State 18

    0 $accept: CompUnit $end •

    $default  accept


State 19

    3 DeclOrFuncDefList: DeclOrFuncDefList DeclOrFuncDef •

    $default  reduce using rule 3 (DeclOrFuncDefList)


State 20

   20 VarDef: ID •
   21       | ID • LBRACKET ConstExp RBRACKET
   22       | ID • LBRACKET ConstExp RBRACKET LBRACKET ConstExp RBRACKET
   23       | ID • ASSIGN InitVal

    ASSIGN    shift, and go to state 27
    LBRACKET  shift, and go to state 28

    $default  reduce using rule 20 (VarDef)


State 21

   15 VarDecl: BType VarDef • VarDefListOpt SEMICN

    COMMA  shift, and go to state 29

    $default  reduce using rule 16 (VarDefListOpt)

    VarDefListOpt  go to state 30
    VarDefList     go to state 31


State 22

    5 DeclOrFuncDef: INTTK ID LPARENT • FuncFParamsOpt RPARENT Block

    INTTK    shift, and go to state 15
    FLOATTK  shift, and go to state 16

    $default  reduce using rule 25 (FuncFParamsOpt)

    BType           go to state 32
    FuncFParamsOpt  go to state 33
    FuncFParams     go to state 34
    FuncFParam      go to state 35


State 23

    6 DeclOrFuncDef: FLOATTK ID LPARENT • FuncFParamsOpt RPARENT Block

    INTTK    shift, and go to state 15
    FLOATTK  shift, and go to state 16

    $default  reduce using rule 25 (FuncFParamsOpt)

    BType           go to state 32
    FuncFParamsOpt  go to state 36
    FuncFParams     go to state 34
    FuncFParam      go to state 35


State 24

    4 DeclOrFuncDef: VOIDTK ID LPARENT • FuncFParamsOpt RPARENT Block

    INTTK    shift, and go to state 15
    FLOATTK  shift, and go to state 16

    $default  reduce using rule 25 (FuncFParamsOpt)

    BType           go to state 32
    FuncFParamsOpt  go to state 37
    FuncFParams     go to state 34
    FuncFParam      go to state 35


State 25

   13 ConstDef: ID • ASSIGN ConstInitVal

    ASSIGN  shift, and go to state 38


State 26

   10 ConstDecl: CONSTTK BType ConstDef • SEMICN

    SEMICN  shift, and go to state 39


State 27

   23 VarDef: ID ASSIGN • InitVal

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    InitVal     go to state 47
    Exp         go to state 48
    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 52
    UnaryOp     go to state 53
    MulExp      go to state 54
    AddExp      go to state 55


State 28

   21 VarDef: ID LBRACKET • ConstExp RBRACKET
   22       | ID LBRACKET • ConstExp RBRACKET LBRACKET ConstExp RBRACKET

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 52
    UnaryOp     go to state 53
    MulExp      go to state 54
    AddExp      go to state 56
    ConstExp    go to state 57


State 29

   18 VarDefList: COMMA • VarDef

    ID  shift, and go to state 20

    VarDef  go to state 58


State 30

   15 VarDecl: BType VarDef VarDefListOpt • SEMICN

    SEMICN  shift, and go to state 59


State 31

   17 VarDefListOpt: VarDefList •
   19 VarDefList: VarDefList • COMMA VarDef

    COMMA  shift, and go to state 60

    $default  reduce using rule 17 (VarDefListOpt)


State 32

   33 FuncFParam: BType • ID
   34           | BType • ID LBRACKET RBRACKET FuncFParamDims

    ID  shift, and go to state 61


State 33

    5 DeclOrFuncDef: INTTK ID LPARENT FuncFParamsOpt • RPARENT Block

    RPARENT  shift, and go to state 62


State 34

   26 FuncFParamsOpt: FuncFParams •
   28 FuncFParams: FuncFParams • COMMA FuncFParam

    COMMA  shift, and go to state 63

    $default  reduce using rule 26 (FuncFParamsOpt)


State 35

   27 FuncFParams: FuncFParam •

    $default  reduce using rule 27 (FuncFParams)


State 36

    6 DeclOrFuncDef: FLOATTK ID LPARENT FuncFParamsOpt • RPARENT Block

    RPARENT  shift, and go to state 64


State 37

    4 DeclOrFuncDef: VOIDTK ID LPARENT FuncFParamsOpt • RPARENT Block

    RPARENT  shift, and go to state 65


State 38

   13 ConstDef: ID ASSIGN • ConstInitVal

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    ConstInitVal  go to state 66
    LVal          go to state 49
    PrimaryExp    go to state 50
    Number        go to state 51
    UnaryExp      go to state 52
    UnaryOp       go to state 53
    MulExp        go to state 54
    AddExp        go to state 56
    ConstExp      go to state 67


State 39

   10 ConstDecl: CONSTTK BType ConstDef SEMICN •

    $default  reduce using rule 10 (ConstDecl)


State 40

   59 LVal: ID •
   60     | ID • LBRACKET Exp RBRACKET
   61     | ID • LBRACKET Exp COMMA Exp RBRACKET error
   68 UnaryExp: ID • LPARENT FuncRParamsOpt RPARENT

    LPARENT   shift, and go to state 68
    LBRACKET  shift, and go to state 69

    $default  reduce using rule 59 (LVal)


State 41

   65 Number: INTCON •

    $default  reduce using rule 65 (Number)


State 42

   66 Number: FLOATCON •

    $default  reduce using rule 66 (Number)


State 43

   70 UnaryOp: PLUS •

    $default  reduce using rule 70 (UnaryOp)


State 44

   71 UnaryOp: MINUS •

    $default  reduce using rule 71 (UnaryOp)


State 45

   72 UnaryOp: NOT •

    $default  reduce using rule 72 (UnaryOp)


State 46

   62 PrimaryExp: LPARENT • Exp RPARENT

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    Exp         go to state 70
    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 52
    UnaryOp     go to state 53
    MulExp      go to state 54
    AddExp      go to state 55


State 47

   23 VarDef: ID ASSIGN InitVal •

    $default  reduce using rule 23 (VarDef)


State 48

   24 InitVal: Exp •

    $default  reduce using rule 24 (InitVal)


State 49

   63 PrimaryExp: LVal •

    $default  reduce using rule 63 (PrimaryExp)


State 50

   67 UnaryExp: PrimaryExp •

    $default  reduce using rule 67 (UnaryExp)


State 51

   64 PrimaryExp: Number •

    $default  reduce using rule 64 (PrimaryExp)


State 52

   73 MulExp: UnaryExp •

    $default  reduce using rule 73 (MulExp)


State 53

   69 UnaryExp: UnaryOp • UnaryExp

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 71
    UnaryOp     go to state 53


State 54

   74 MulExp: MulExp • MUL UnaryExp
   75       | MulExp • DIV UnaryExp
   76       | MulExp • MOD UnaryExp
   77 AddExp: MulExp •

    MUL  shift, and go to state 72
    DIV  shift, and go to state 73
    MOD  shift, and go to state 74

    $default  reduce using rule 77 (AddExp)


State 55

   57 Exp: AddExp •
   78 AddExp: AddExp • PLUS MulExp
   79       | AddExp • MINUS MulExp

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 57 (Exp)


State 56

   78 AddExp: AddExp • PLUS MulExp
   79       | AddExp • MINUS MulExp
   92 ConstExp: AddExp •

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 92 (ConstExp)


State 57

   21 VarDef: ID LBRACKET ConstExp • RBRACKET
   22       | ID LBRACKET ConstExp • RBRACKET LBRACKET ConstExp RBRACKET

    RBRACKET  shift, and go to state 77


State 58

   18 VarDefList: COMMA VarDef •

    $default  reduce using rule 18 (VarDefList)


State 59

   15 VarDecl: BType VarDef VarDefListOpt SEMICN •

    $default  reduce using rule 15 (VarDecl)


State 60

   19 VarDefList: VarDefList COMMA • VarDef

    ID  shift, and go to state 20

    VarDef  go to state 78


State 61

   33 FuncFParam: BType ID •
   34           | BType ID • LBRACKET RBRACKET FuncFParamDims

    LBRACKET  shift, and go to state 79

    $default  reduce using rule 33 (FuncFParam)


State 62

    5 DeclOrFuncDef: INTTK ID LPARENT FuncFParamsOpt RPARENT • Block

    LBRACE  shift, and go to state 80

    Block  go to state 81


State 63

   28 FuncFParams: FuncFParams COMMA • FuncFParam

    INTTK    shift, and go to state 15
    FLOATTK  shift, and go to state 16

    BType       go to state 32
    FuncFParam  go to state 82


State 64

    6 DeclOrFuncDef: FLOATTK ID LPARENT FuncFParamsOpt RPARENT • Block

    LBRACE  shift, and go to state 80

    Block  go to state 83


State 65

    4 DeclOrFuncDef: VOIDTK ID LPARENT FuncFParamsOpt RPARENT • Block

    LBRACE  shift, and go to state 80

    Block  go to state 84


State 66

   13 ConstDef: ID ASSIGN ConstInitVal •

    $default  reduce using rule 13 (ConstDef)


State 67

   14 ConstInitVal: ConstExp •

    $default  reduce using rule 14 (ConstInitVal)


State 68

   68 UnaryExp: ID LPARENT • FuncRParamsOpt RPARENT

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    $default  reduce using rule 29 (FuncRParamsOpt)

    FuncRParamsOpt  go to state 85
    FuncRParams     go to state 86
    Exp             go to state 87
    LVal            go to state 49
    PrimaryExp      go to state 50
    Number          go to state 51
    UnaryExp        go to state 52
    UnaryOp         go to state 53
    MulExp          go to state 54
    AddExp          go to state 55


State 69

   60 LVal: ID LBRACKET • Exp RBRACKET
   61     | ID LBRACKET • Exp COMMA Exp RBRACKET error

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    Exp         go to state 88
    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 52
    UnaryOp     go to state 53
    MulExp      go to state 54
    AddExp      go to state 55


State 70

   62 PrimaryExp: LPARENT Exp • RPARENT

    RPARENT  shift, and go to state 89


State 71

   69 UnaryExp: UnaryOp UnaryExp •

    $default  reduce using rule 69 (UnaryExp)


State 72

   74 MulExp: MulExp MUL • UnaryExp

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 90
    UnaryOp     go to state 53


State 73

   75 MulExp: MulExp DIV • UnaryExp

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 91
    UnaryOp     go to state 53


State 74

   76 MulExp: MulExp MOD • UnaryExp

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 92
    UnaryOp     go to state 53


State 75

   78 AddExp: AddExp PLUS • MulExp

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 52
    UnaryOp     go to state 53
    MulExp      go to state 93


State 76

   79 AddExp: AddExp MINUS • MulExp

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 52
    UnaryOp     go to state 53
    MulExp      go to state 94


State 77

   21 VarDef: ID LBRACKET ConstExp RBRACKET •
   22       | ID LBRACKET ConstExp RBRACKET • LBRACKET ConstExp RBRACKET

    LBRACKET  shift, and go to state 95

    $default  reduce using rule 21 (VarDef)


State 78

   19 VarDefList: VarDefList COMMA VarDef •

    $default  reduce using rule 19 (VarDefList)


State 79

   34 FuncFParam: BType ID LBRACKET • RBRACKET FuncFParamDims

    RBRACKET  shift, and go to state 96


State 80

   37 Block: LBRACE • BlockItem_list RBRACE

    $default  reduce using rule 38 (BlockItem_list)

    BlockItem_list  go to state 97


State 81

    5 DeclOrFuncDef: INTTK ID LPARENT FuncFParamsOpt RPARENT Block •

    $default  reduce using rule 5 (DeclOrFuncDef)


State 82

   28 FuncFParams: FuncFParams COMMA FuncFParam •

    $default  reduce using rule 28 (FuncFParams)


State 83

    6 DeclOrFuncDef: FLOATTK ID LPARENT FuncFParamsOpt RPARENT Block •

    $default  reduce using rule 6 (DeclOrFuncDef)


State 84

    4 DeclOrFuncDef: VOIDTK ID LPARENT FuncFParamsOpt RPARENT Block •

    $default  reduce using rule 4 (DeclOrFuncDef)


State 85

   68 UnaryExp: ID LPARENT FuncRParamsOpt • RPARENT

    RPARENT  shift, and go to state 98


State 86

   30 FuncRParamsOpt: FuncRParams •
   32 FuncRParams: FuncRParams • COMMA Exp

    COMMA  shift, and go to state 99

    $default  reduce using rule 30 (FuncRParamsOpt)


State 87

   31 FuncRParams: Exp •

    $default  reduce using rule 31 (FuncRParams)


State 88

   60 LVal: ID LBRACKET Exp • RBRACKET
   61     | ID LBRACKET Exp • COMMA Exp RBRACKET error

    RBRACKET  shift, and go to state 100
    COMMA     shift, and go to state 101


State 89

   62 PrimaryExp: LPARENT Exp RPARENT •

    $default  reduce using rule 62 (PrimaryExp)


State 90

   74 MulExp: MulExp MUL UnaryExp •

    $default  reduce using rule 74 (MulExp)


State 91

   75 MulExp: MulExp DIV UnaryExp •

    $default  reduce using rule 75 (MulExp)


State 92

   76 MulExp: MulExp MOD UnaryExp •

    $default  reduce using rule 76 (MulExp)


State 93

   74 MulExp: MulExp • MUL UnaryExp
   75       | MulExp • DIV UnaryExp
   76       | MulExp • MOD UnaryExp
   78 AddExp: AddExp PLUS MulExp •

    MUL  shift, and go to state 72
    DIV  shift, and go to state 73
    MOD  shift, and go to state 74

    $default  reduce using rule 78 (AddExp)


State 94

   74 MulExp: MulExp • MUL UnaryExp
   75       | MulExp • DIV UnaryExp
   76       | MulExp • MOD UnaryExp
   79 AddExp: AddExp MINUS MulExp •

    MUL  shift, and go to state 72
    DIV  shift, and go to state 73
    MOD  shift, and go to state 74

    $default  reduce using rule 79 (AddExp)


State 95

   22 VarDef: ID LBRACKET ConstExp RBRACKET LBRACKET • ConstExp RBRACKET

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 52
    UnaryOp     go to state 53
    MulExp      go to state 54
    AddExp      go to state 56
    ConstExp    go to state 102


State 96

   34 FuncFParam: BType ID LBRACKET RBRACKET • FuncFParamDims

    LBRACKET  shift, and go to state 103

    FuncFParamDims  go to state 104


State 97

   37 Block: LBRACE BlockItem_list • RBRACE
   39 BlockItem_list: BlockItem_list • BlockItem

    error       shift, and go to state 105
    INTTK       shift, and go to state 15
    FLOATTK     shift, and go to state 16
    CONSTTK     shift, and go to state 4
    IFTK        shift, and go to state 106
    WHILETK     shift, and go to state 107
    BREAKTK     shift, and go to state 108
    CONTINUETK  shift, and go to state 109
    RETURNTK    shift, and go to state 110
    ID          shift, and go to state 40
    INTCON      shift, and go to state 41
    FLOATCON    shift, and go to state 42
    PLUS        shift, and go to state 43
    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    LPARENT     shift, and go to state 46
    LBRACE      shift, and go to state 80
    RBRACE      shift, and go to state 111
    SEMICN      shift, and go to state 112

    Decl        go to state 113
    ConstDecl   go to state 9
    BType       go to state 10
    VarDecl     go to state 11
    Block       go to state 114
    BlockItem   go to state 115
    Stmt        go to state 116
    Exp         go to state 117
    LVal        go to state 118
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 52
    UnaryOp     go to state 53
    MulExp      go to state 54
    AddExp      go to state 55


State 98

   68 UnaryExp: ID LPARENT FuncRParamsOpt RPARENT •

    $default  reduce using rule 68 (UnaryExp)


State 99

   32 FuncRParams: FuncRParams COMMA • Exp

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    Exp         go to state 119
    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 52
    UnaryOp     go to state 53
    MulExp      go to state 54
    AddExp      go to state 55


State 100

   60 LVal: ID LBRACKET Exp RBRACKET •

    $default  reduce using rule 60 (LVal)


State 101

   61 LVal: ID LBRACKET Exp COMMA • Exp RBRACKET error

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46

    Exp         go to state 120
    LVal        go to state 49
    PrimaryExp  go to state 50
    Number      go to state 51
    UnaryExp    go to state 52
    UnaryOp     go to state 53
    MulExp      go to state 54
    AddExp      go to state 55


State 102

   22 VarDef: ID LBRACKET ConstExp RBRACKET LBRACKET ConstExp • RBRACKET

    RBRACKET  shift, and go to state 121


State 103

   35 FuncFParamDims: LBRACKET • RBRACKET

    RBRACKET  shift, and go to state 122


State 104

   34 FuncFParam: BType ID LBRACKET RBRACKET FuncFParamDims •
   36 FuncFParamDims: FuncFParamDims • LBRACKET RBRACKET

    LBRACKET  shift, and go to state 123

    $default  reduce using rule 34 (FuncFParam)


State 105

   42 BlockItem: error • SEMICN

    SEMICN  shift, and go to state 124


State 106

   50 Stmt: IFTK • LPARENT Cond RPARENT Stmt
   51     | IFTK • LPARENT Cond RPARENT Stmt ELSETK Stmt

    LPARENT  shift, and go to state 125


State 107

   52 Stmt: WHILETK • LPARENT Cond RPARENT Stmt

    LPARENT  shift, and go to state 126


State 108

   53 Stmt: BREAKTK • SEMICN

    SEMICN  shift, and go to state 127


State 109

   54 Stmt: CONTINUETK • SEMICN

    SEMICN  shift, and go to state 128


State 110

   55 Stmt: RETURNTK • SEMICN
   56     | RETURNTK • Exp SEMICN

    ID        shift, and go to state 40
    INTCON    shift, and go to state 41
    FLOATCON  shift, and go to state 42
    PLUS      shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    LPARENT   shift, and go to state 46
    SEMICN    shift, and go to state 129
